--- a/index.html
+++ b/index.html
@@ -237,16 +237,16 @@
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                                 <li class="nav-item active">
-                                    <a class="nav-link fs-6" href="#accueil"><span class="lettre1itemMenu">A</span>ccueil</a>
+                                    <a class="nav-link fs-6" href="#accueil">Accueil</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link fs-6" href="#horaires"><span class="lettre1itemMenu">H</span>oraires</a>
+                                    <a class="nav-link fs-6" href="#horaires">Horaires</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link fs-6" href="#equipe"><span class="lettre1itemMenu">E</span>quipe</a>
+                                    <a class="nav-link fs-6" href="#equipe">Equipe</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link fs-6" href="#contact"><span class="lettre1itemMenu">C</span>ontact</a>
+                                    <a class="nav-link fs-6" href="#contact">Contact</a>
                                 </li>
 
                             </ul>
