--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link fs-6" href="#accueil">Accueil</a>
                                 </li>
                                 <li class="nav-item">
