mise_a_jour_style_css_perso

--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
 
         <link href="form-validation.css" rel="stylesheet">
 
+        <link rel="stylesheet" href="style/lestyle.css">
+
     </head>
 
     <body onload="afficher_toutes_les_courses();">
