--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                     <div class="espace-transitoire"></div>
                     <div class="display-2">Notre équipe</div>
                     <div class="espace-entre-titre-et-contenu"></div>
-                    <div class="row grid gap-2 justify-content-center">
-                        <div class="col-12 col-md-4 card" style="width: 250px;">
+                    <div class="row grid-container">
+                        <div class="col-12 col-md-4 card grid-item">
                             <!--<div class="card-header">DAVID SOKE</div>-->
                             <div class="card-body">
                                 <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="w-100 h-100 object-fit-fill border rounded">
@@ -374,7 +374,7 @@
                             </div>
     
                         </div>
-                        <div class="col-12 col-md-4 card" style="width: 250px;">
+                        <div class="col-12 col-md-4 card grid-item">
                             <div class="card-body">
                                 <img src="equipe/sans.jpg" alt="Maître Timothée Kisaba Luembwe" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
@@ -384,7 +384,7 @@
                             </div>
     
                         </div>
-                        <div class="col-12 col-md-4 card" style="width: 250px;">
+                        <div class="col-12 col-md-4 card grid-item">
                             <div class="card-body">
                                 <img src="equipe/sans.jpg" alt="Maître Jean Luc Nday" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
