--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         <div class="col-12 col-md-4 card grid-item">
                             <!--<div class="card-header">DAVID SOKE</div>-->
                             <div class="card-body">
-                                <img src="equipe/dsk001.png" alt="Maître David Soke Kitungwa" class="w-100 h-100 object-fit-fill border rounded">
+                                <img src="equipe/sans.jpg" alt="Maître David Soke Kitungwa" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
                             <div class="card-footer">
                                 <!-- Button trigger modal -->
@@ -541,7 +541,7 @@
                             </div>
                             <div class="modal-body">
                                 <p class="align-items-center resume-avocat">
-                                    <img src="equipe/dsk001.png" alt="" class="rounded-circle" width="80" height="80">
+                                    <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
                                     Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                     <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                     <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
