update photos equipe

--- a/index.html
+++ b/index.html
@@ -323,11 +323,7 @@
                                     </li>
                                     <li class="list-group-item d-flex justify-content-between align-items-center">
                                         <span class="day">Samedi</span>
-                                        <span>08h00 - 12h30</span>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        <span class="day">Dimanche</span>
-                                        <span>Fermé</span>
+                                        <span>Fermé sauf urgence</span>
                                     </li>
                                 </ul>
                             <!--</div>-->
@@ -343,7 +339,7 @@
                         <div class="col-12 col-md-4 card grid-item">
                             <!--<div class="card-header">DAVID SOKE</div>-->
                             <div class="card-body">
-                                <img src="equipe/sans.jpg" alt="Maître David Soke Kitungwa" class="w-100 h-100 object-fit-fill border rounded">
+                                <img src="equipe/david1.jpg" alt="Maître David Soke Kitungwa" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
                             <div class="card-footer">
                                 <!-- Button trigger modal -->
@@ -353,7 +349,7 @@
                         </div>
                         <div class="col-12 col-md-4 card grid-item">
                             <div class="card-body">
-                                <img src="equipe/sans.jpg" alt="Maître Timothée Kisaba Luembwe" class="w-100 h-100 object-fit-fill border rounded">
+                                <img src="equipe/timothee.jpg" alt="Maître Timothée Kisaba Luembwe" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
                             <div class="card-footer">
                                 <!-- Button trigger modal -->
@@ -363,7 +359,7 @@
                         </div>
                         <div class="col-12 col-md-4 card grid-item">
                             <div class="card-body">
-                                <img src="equipe/sans.jpg" alt="Maître Jean Luc Nday" class="w-100 h-100 object-fit-fill border rounded">
+                                <img src="equipe/jeanluc.jpg" alt="Maître Jean Luc Nday" class="w-100 h-100 object-fit-fill border rounded">
                             </div>
                             <div class="card-footer">
                                 <!-- Button trigger modal -->
@@ -518,7 +514,7 @@
                             </div>
                             <div class="modal-body">
                                 <p class="align-items-center resume-avocat">
-                                    <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
+                                    <img src="equipe/david1.jpg" alt="" class="rounded-circle" width="80" height="80">
                                     Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                     <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                     <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
@@ -545,7 +541,7 @@
                             </div>
                             <div class="modal-body">
                                 <p class="align-items-center resume-avocat">
-                                    <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
+                                    <img src="equipe/timothee.jpg" alt="" class="rounded-circle" width="80" height="80">
                                     Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                     <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                     <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
@@ -572,7 +568,7 @@
                             </div>
                             <div class="modal-body">
                                 <p class="align-items-center resume-avocat">
-                                    <img src="equipe/sans.jpg" alt="" class="rounded-circle" width="80" height="80">
+                                    <img src="equipe/jeanluc.jpg" alt="" class="rounded-circle" width="80" height="80">
                                     Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
                                     <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
                                     <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
