update profil jeanluc

--- a/index.html
+++ b/index.html
@@ -569,13 +569,24 @@
                             <div class="modal-body">
                                 <p class="align-items-center resume-avocat">
                                     <img src="equipe/jeanluc.jpg" alt="" class="rounded-circle" width="80" height="80">
-                                    Juriste, détenteur d’un diplôme en droit de l'université de Lubumbashi depuis juillet 2018.
-                                    <br>Avocat au barreau du Lualaba dès le 15 Août 2019.
-                                    <br>Priorisant toujours l’interêt du client, tenant compte de l’état évolutif du droit.
-                                    <br>Il procure tout le savoir-faire qu’il a développé au fil de ses années dans la pratique de cette noble profession, qui plus est, dû  à l’expérience engorgée au sein du Cabinet FBN & Associés et Cabinet PK&P lui devant une polyvalence dans le traitement des cas.
-                                    <br>Pratiquant majoritairement dans le domaine du droit pénal pour son côté humainement sensible. Comme le dit Voltaire : « vaut mieux libérer 100 coupable que condamné 1 innocent ».
-                                    <br>Il a eu à traiter beau nombre cas dans le domaine du droit des contrats, droit du sport, droit civil, droit immobilier, droit du Travail, droit de Migration, droit Fiscal, droit des Affaires en général et particulièrement en recouvrement de créances et accompagne également les entreprises dans leur projets ( création de société, partenariats commerciaux, etc …)
-                                    <br>Il représente et assiste les personnes  devant toutes les instances judiciaires et institutions publiques.
+                                    <p>
+                                        Jean Luc ILUNGA NDAYI est un Diplômé en DROIT PRIVE et JUDICIAIRE de L’UNIVERSITE De Lubumbashi depuis le 30 juillet 2018  avec une spécialisation en fiscalité.
+                                        Un juriste fiscaliste est un professionnel du droit spécialisé dans la fiscalité. Voici une présentation générale de notre profil :
+                                        NOS COMPÉTENCES TECHNIQUES:
+                                        	Maîtrise des lois fiscales et de la législation en vigueur
+                                        	Capacité d'analyse et de recherche juridique
+                                        	Rédaction et révision de contrats fiscaux
+                                        	Conseil et accompagnement des clients dans leurs démarches fiscales
+                                        	Gestion des contentieux fiscaux et représentation devant les autorités fiscales
+                                        NOS QUALITÉS :
+                                        	Rigueur et précision;
+                                        	Capacité d'adaptation et réactivité face aux évolutions législatives;;
+                                        	Bonne communication et capacité à expliquer des concepts complexes de manière claire;
+                                        	Sens de l'éthique et confidentialité dans le traitement des informations.
+
+                                        Le juriste fiscaliste joue un rôle clé dans la gestion fiscale des entreprises et des particuliers, en les conseillant sur les meilleures options pour optimiser leur situation fiscale tout en respectant la législation en vigueur.
+
+                                    </p>
                                 </p>
                             </div>
                             <div class="modal-footer">
