--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 <div class="container-fluid">
 
-                    <a class="navbar-brand" href="#" translate="no">TD AVOCATS</a>
+                    <a class="navbar-brand" href="#" translate="no">TD AVOCATS <span id="logotd"></span></a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
 
